--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1 text-center">
-        <h2>Our Work</h2>
+        <h2>Capstone projects 2016</h2>
         <hr class="small">
         <div class="row">
           <div class="col-md-6">
@@ -14,21 +14,21 @@
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="#">
+              <a target="_blank"  href="#">
                 <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="#">
+              <a target="_blank"  href="#">
                 <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a href="#">
+              <a target="_blank" href="#">
                 <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
               </a>
             </div>
