img and site changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
 <header id="top" class="header">
   <div class="text-vertical-center">
-    <h1>University of Colorado at Boulder Startup Capstone</h1>
-    <h3>Enabling computer scientists to build technical businesses</h3>
+    <h1>Entrepreneurial Projects Capstone</h1>
     <br>
-    <a href="#about" class="btn btn-dark btn-lg">Apply Now</a>
+    <h1>Department of Computer Science, University of Colorado Boulder</h1>
+    <h3>Enabling computer science seniors to build their own technical businesses</h3>
+    <br>
+    <a href="mailto:richard.han@colorado.edu" class="btn btn-dark btn-lg">Apply Now</a>
   </div>
 </header>
