--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-        <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+        <h2>Build your own computer science startup as your senior year capstone project!</h2>
+        <p class="lead">We learn by doing.  You will pitch ideas, form teams, find customers, build a prototype, and launch your business.</p>
       </div>
     </div>
     <!-- /.row -->
