--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -21,18 +21,18 @@
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a target="_blank"  href="http://workit.strikingly.com">
-                <img class="img-portfolio img-responsive" src="img/Workit_logo.png">
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="portfolio-item">
               <a target="_blank" href="http://divecoding.github.io/">
                 <img class="img-portfolio img-responsive" src="img/divecoding.png">
               </a>
             </div>
           </div>
+<!--           <div class="col-md-6">
+            <div class="portfolio-item">
+              <a target="_blank"  href="http://workit.strikingly.com">
+                <img class="img-portfolio img-responsive" src="img/Workit_logo.png">
+              </a>
+            </div>
+          </div> -->
           <div class="col-md-6">
             <div class="portfolio-item">
               <a target="_blank" href="http://outloud.io">
