Added new workIt website

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -21,7 +21,7 @@
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <a target="_blank"  href="http://workit.strikingly.com">
+              <a target="_blank"  href="http://workit-app.com">
                 <img class="img-portfolio img-responsive" src="img/Workit_logo.jpg">
               </a>
             </div>
