added updates thingy

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -5,6 +5,8 @@
 
 <body>
   {% include header.html %}
+  {% include call-to-action.html %}
+  {% include news.html %}
   {% include about.html %}
   {% include portfolio.html %}
   {% include footer.html %}
