--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -1,10 +1,10 @@
-<aside class="call-to-action bg-primary">
+<aside class="about back-n">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h3>The buttons below are impossible to resist.</h3>
-        <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-        <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+      <h1>Updates!</h1>
+      <hr class="small">
+        <h2>Join us on April 28 at the Demo Day for the CS Entrepreneurial Capstone (3:30 pm in ECCR 265 of the Engineering Center).  See all 6 student teams publicly pitch their startup businesses</h2>
       </div>
     </div>
   </div>
