--- a/_includes/news.html
+++ b/_includes/news.html
@@ -21,6 +21,14 @@
           <!-- /.row  -->
         </div>
         <h2>Dive Coding wins the Galvanize Prize!</h2>
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <div class="portfolio-item">
+            <a target="_blank" href="">
+              <img class="img-portfolio img-responsive" src="img/nvc_divecoding_1.jpg">
+            </a>
+          </div>
+        </div>
         <!-- /.row (nested) -->
       </div>
       <!-- /.col-lg-10 -->
