add google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,6 @@
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
-
+    {% include ga.html %}
     </body>
 </html>
