Added Previous Year Bar

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -236,7 +236,7 @@ fieldset[disabled] .btn-xl.active {
 
 @media(min-width:768px) {
     .navbar-default {
-        padding: 25px 0;
+        margin: 30px 0;
         border: 0;
         background-color: transparent;
         -webkit-transition: padding .3s;
@@ -257,6 +257,7 @@ fieldset[disabled] .btn-xl.active {
 
     .navbar-default.navbar-shrink {
         padding: 10px 0;
+        margin: 0;
         background-color: #222;
     }
 
@@ -867,4 +868,12 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: #{{ site.data.template.color.primary }};
+}
+
+.previous_years {
+    background: #000;
+    height: 30px;
+    color: #fff;
+    text-align: center;
+    padding: 4px;
 }
