--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,11 @@
 
     <body id="page-top" class="index">
 
+    <div class="previous_years">
+        View Previous Years:
+        <a href="http://custartupcapstone.com/2015-2016/" target="_blank">2015/16</a>
+    </div>
+
     {% include header.html %}
     {% include about.html %}
     {% include companies_grid.html %}
