add achievements section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
 
     {% include header.html %}
     {% include about.html %}
+    {% include achievements.html %}
     {% include companies_grid.html %}
     {% include timeline.html %}
     {% include instructors.html %}
