--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,9 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#achievements">Achievements</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#portfolio">Companies</a>
                     </li>
                     <li>
@@ -51,4 +54,3 @@
           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
         {% endfor %}
  -->
-
