Spelling error fix

--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -13,7 +13,7 @@
                     <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">New Venture Challenge</h4>
-                <p class="text-muted">Out of a total of twenty teams competing within the IT track semi-finals and finals, four of our teams placed in the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> and were awarded <strong>$5,000</strong> to use to futhur their companies.</p>
+                <p class="text-muted">Out of a total of twenty teams competing within the IT track semi-finals and finals, four of our teams placed in the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> and were awarded <strong>$5,000</strong> to use to further their companies.</p>
             </div>
             <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
