update icon and layout for achievements

--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -7,7 +7,7 @@
                     <h3 class="section-subheading text-muted">Accomplishments from the companies in the Capstone this year</h3>
                 </div>
             </div>
-            <div class="col-md-4 text-center">
+            <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
@@ -15,7 +15,7 @@
                 <h4 class="service-heading">New Venture Challenge</h4>
                 <p class="text-muted">Out of a total of twenty teams competing within the IT track semi-finals and finals, four of our teams placed in the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> and were awarded <strong>$5,000</strong> to use to further their companies.</p>
             </div>
-            <div class="col-md-4 text-center">
+            <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-usd fa-stack-1x fa-inverse"></i>
@@ -23,17 +23,17 @@
                 <h4 class="service-heading">Revenue Generating</h4>
                 <p class="text-muted">Some companies were focused on non-revenue generating ideas, while others made money. One company created in the Capstone brought in over <strong>$2,000</strong> in revenue.</p>
             </div>
-            <div class="col-md-4 text-center">
+            <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-usd fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-code fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">Computer Science Senior Expo</h4>
                 <p class="text-muted">Best Poster: 1st - The Grower, 2nd - Crawlr<br>
                                       Best Demo: 2nd - StuffSanity<br>
                                       Best Technical Communication: 2nd - Almond</p>
             </div>
-            <div class="col-md-12 text-center">
+            <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-flask fa-stack-1x fa-inverse"></i>
