Updating Course timeline url

--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -68,9 +68,10 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4><a href="http://www.cs.colorado.edu/~rhan/CSCI_4358_5350_Spring_2017/Syllabus%20CSCI%204358_5350%20Entrepreneurial%20Projects%20II.html" target="_blank" style="color: #fff;">Learn<br>More</a></h4>
+                                <h4><a href="http://www.cs.colorado.edu/%7Erhan/CSCI_4358_5350_Spring_2018/syllabus.html" target="_blank" style="color: #fff;">Learn<br>More</a></h4>
                             </div>
                         </li>
+
                     </ul>
                 </div>
             </div>
