Updating Companies Info & Logo

--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -13,8 +13,10 @@
                     <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">New Venture Challenge</h4>
-                <p class="text-muted">Out of a total of twenty teams competing within the IT track semi-finals and finals, four of our teams placed in the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> and were awarded <strong>$5,000</strong> to use to further their companies.</p>
+                <p class="text-muted">Out of a total of 15 teams from class competing within the IT track semi-finals, 3 of our teams made it to the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals<br>&bull;BeautiBook went on to win the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals and they were awarded <strong>$2,000</strong> to use to further their company.<br>>
+                    &bull;Hearth were placed 3rd in the NVC IT Track Finals and were awarded<strong>$750</strong> to firther their company<br>&bull;Ticket Buffs were awarded<strong>$500</strong> to further their company<br>Lambda Leaf competed in NVC Research Track semifinals and went into the Research Track Finals.</p>
             </div>
+<!--
             <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -41,5 +43,6 @@
                 <h4 class="service-heading">Catalyze CU</h4>
                 <p class="text-muted">Glimpse has been accepted to the equity free <a href="http://catalyzecu.com/" target="_blank">Catalyze CU Accelerator</a> program.</p>
             </div>
+-------->
         </div>
     </section>
