--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -1,6 +1,7 @@
 <!-- Services Section -->
     <section id="achievements">
         <div class="container">
+          <center>
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Achievements</h2>
@@ -13,9 +14,10 @@
                     <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">New Venture Challenge</h4>
-                <p class="text-muted">Out of a total of 15 teams from class competing within the IT track semi-finals, 3 of our teams made it to the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals<br>&bull;BeautiBook went on to win the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals and they were awarded <strong>$2,000</strong> to use to further their company.<br>>
-                    &bull;Hearth were placed 3rd in the NVC IT Track Finals and were awarded<strong>$750</strong> to firther their company<br>&bull;Ticket Buffs were awarded<strong>$500</strong> to further their company<br>Lambda Leaf competed in NVC Research Track semifinals and went into the Research Track Finals.</p>
+                <p class="text-muted">Out of a total of 15 teams from class competing within the IT track semi-finals, 3 of our teams made it to the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals<br><strong>&bull;</strong>BeautiBook went on to win the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals and they were awarded <strong>$2,000</strong> to use to further their company.<br>>
+                    <strong>&bull;</strong>  Hearth were placed 3rd in the NVC IT Track Finals and were awarded<strong>$750</strong> to firther their company<br><strong>&bull;</strong>  Ticket Buffs were awarded<strong>$500</strong> to further their company<br>Lambda Leaf competed in NVC Research Track semifinals and went into the Research Track Finals.</p>
             </div>
+          </center>
 <!--
             <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
