Updating Companies Info

--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -1,20 +1,20 @@
 <!-- Services Section -->
     <section id="achievements">
         <div class="container">
-          <center>
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Achievements</h2>
                     <h3 class="section-subheading text-muted">Accomplishments from the companies in the Capstone this year</h3>
                 </div>
             </div>
+          <center>
             <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">New Venture Challenge</h4>
-                <p class="text-muted">Out of a total of 15 teams from class competing within the IT track semi-finals, 3 of our teams made it to the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals<br><strong>&bull;  BeautiBook</strong> went on to win the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals and they were awarded <strong>$2,000</strong> to use to further their company.<br>
+                <p class="text-muted">Out of a total of 15 teams from class that competed in the NVC IT track semi-finals, 3 of our teams made it to the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals<br><strong>&bull;  BeautiBook</strong> went on to win the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals and they were awarded <strong>$2,000</strong> to use to further their company.<br>
                     <strong>&bull;  Hearth</strong> were placed 3rd in the NVC IT Track Finals and were awarded<strong>$750</strong> to further their company<br><strong>&bull;  Ticket Buffs</strong> were awarded<strong>$500</strong> to further their company<br><br><strong>Lambda Leaf</strong> competed in NVC Research Track semifinals and went into the Research Track Finals.</p>
             </div>
           </center>
