Editing the timeline & Modifying the Companies List

--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -58,14 +58,45 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>January - March</h4>
+                                    <h4>January - Feb</h4>
                                     <h4 class="subheading">Ramping Up</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Students spend the seconds semester building out their products. To assist in this numerous industry professionals are brought in to teach about marketing, tax law, intellectual property, scaling, hiring, and more. Throughout the semester students practice their pitches in preparation of the <a href="http://www.colorado.edu/nvc/" target="_blank">CU NVC</a>.</p>
+                                    <p class="text-muted">Students spend the first couple of months of the second semester building out their products. To assist in this numerous industry professionals are brought in to teach about marketing, tax law, intellectual property, scaling, hiring, and more. </p>
                                 </div>
                             </div>
                         </li>
+
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/CUNVC.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>March</h4>
+                                    <h4 class="subheading">CU New Venture Challenge</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Now that the students businesses have gained sufficient traction, the students practice their pitches in preparation of the <a href="http://www.colorado.edu/nvc/" target="_blank"><strong>CU NVC</strong></a>.</p>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/expo.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>April</h4>
+                                    <h4 class="subheading">College of Engineering & Applied Science Expo</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Students get prepared to present their business in the <a href="https://www.colorado.edu/engineering/expo"><strong>College Expo</strong></a> by working further on building out their working products.</p>
+                                </div>
+                            </div>
+                        </li>
+
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4><a href="http://www.cs.colorado.edu/%7Erhan/CSCI_4358_5350_Spring_2018/syllabus.html" target="_blank" style="color: #fff;">Learn<br>More</a></h4>
