--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -69,7 +69,7 @@
 
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="" src="img/about/CUNVC.jpg" alt="">
+                                <img class="img-responsive" src="img/about/CUNVC.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -84,7 +84,7 @@
 
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="" src="img/about/expo.png" alt="">
+                                <img class="img-responsive" src="img/about/expo.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
