Updating Contact Info in About

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,7 @@
             <div class="row text-center">
                 <p class="col-md-8 col-md-offset-2">The Goal of the Capstone is to provide Computer Science students with the tools to be successful technical co-founders of their own startups. We will explore the initial stages of founding a startup, including team formation, idea validation, pivoting and pitching, while employing an iterative methodology. Student teams will develop a minimum viable product, pitch their final startup concept, and be evaluated on product/market fit.</p>
 
-                <p class="col-md-6 col-md-offset-3">Feel free to reach out to students from the 2017-2018 school year with any questions! <a href="mailto:michael.guida@colorado.edu">michael.guida@colorado.edu</a> | <a href="mailto:ben.williams@colorado.edu">ben.williams@colorado.edu</a></p>
+                <p class="col-md-6 col-md-offset-3">Feel free to reach out to Profesor Rick Han with any questions! <a href="mailto:richard.han@colorado.edu">richard.han@colorado.edu</a> </p>
             </div>
         </div>
     </section>
