Adding Donate Option And updating Result of NVC Research Track Finals

--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -15,7 +15,7 @@
                 </span>
                 <h4 class="service-heading">New Venture Challenge</h4>
                 <p class="text-muted">Out of a total of 15 teams from class that competed in the NVC IT track semi-finals, 3 of our teams made it to the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals<br><strong>&bull;  BeautiBook</strong> went on to win the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals and they were awarded <strong>$2,000</strong> to use to further their company.<br>
-                    <strong>&bull;  Hearth</strong> were placed 3rd in the NVC IT Track Finals and were awarded<strong>$750</strong> to further their company<br><strong>&bull;  Ticket Buffs</strong> were awarded<strong>$500</strong> to further their company<br><br><strong>Lambda Leaf</strong> competed in NVC Research Track semifinals and went into the Research Track Finals.</p>
+                    <strong>&bull;  Hearth</strong> placed 3rd in the NVC IT Track Finals and was awarded<strong>$750</strong> to further their company<br><strong>&bull;  Ticket Buffs</strong> was awarded<strong>$500</strong> to further their company<br><br><strong>Lambda Leaf</strong> placed 3rd in the NVC Research Track Finals and was awarded<strong>$1000</strong> to further their company.</p>
             </div>
           </center>
 <!--
