Editing Donate button colour

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,13 +40,28 @@
         <!-- /.container-fluid -->
     </nav>
 
+    <style>
+    .button {
+        background-color: #4CAF50; /* Green */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+    </style>
+
     <!-- Header -->
     <header>
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Computer Science Entrepreneurial Capstone at the University of Colorado Boulder</div>
 <!--                <a href="#about" class="page-scroll btn btn-xl">Learn More</a>-->
-                    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><strong>&#36;</strong> Donate</button>
+                    <button type="button" class="button" data-toggle="modal" data-target="#myModal"><strong>&#36;</strong> Donate</button>
             </div>
         </div>
     </header>
@@ -62,13 +77,13 @@
             <h4 class="modal-title"><strong>Instructions to Donate to CS Entrepreneurial Capstone</strong></h4>
           </div>
           <div class="modal-body">
-            <p> <strong>&bull;</strong> On the donate page, select or enter the amount you wish to give, and whether or not this gift is in memory or in honor of someone.<br>
-              <strong>&bull;</strong> Add the gift to your Gift Basket and continue browsing, or click “Give Now” to complete your donation.<br>
-              <strong>&bull; Please make sure you enter "13403130 Han CS Sr Entrepreneurial Capstone, CU Foundation: 0125610" in the comments section of the form.</strong>
+            <p> <strong>&bull;</strong>  On the donate page, select or enter the amount you wish to give, and whether or not this gift is in memory or in honor of someone.<br>
+              <strong>&bull;</strong>  Add the gift to your Gift Basket and continue browsing, or click “Give Now” to complete your donation.<br>
+              <strong>&bull;  Please make sure you enter "13403130 Han CS Sr Entrepreneurial Capstone, CU Foundation: 0125610" in the comments section of the form.</strong>
             </p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" onclick="location.href='https://giving.cu.edu/fund/write-fund';">Continue</button>
+            <button type="button" class="button" onclick="location.href='https://giving.cu.edu/fund/write-fund';" target="_blank">Continue</button>
           </div>
         </div>
 
