Making Button open in a new tab

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -83,7 +83,7 @@
             </p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="button" onclick="location.href='https://giving.cu.edu/fund/write-fund';" target="_blank">Continue</button>
+            <button type="button" class="button" onclick="window.open('https://giving.cu.edu/fund/write-fund','_blank')">Continue</button>
           </div>
         </div>
 
