--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,7 +43,8 @@
     <style>
     .button {
         background-color: #4CAF50; /* Green */
-        border: none;
+        border: 1px;
+        border-radius: 15px;
         color: white;
         padding: 15px 32px;
         text-align: center;
