--- a/_includes/header.html
+++ b/_includes/header.html
@@ -76,6 +76,9 @@
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
             <h4 class="modal-title"><strong>Instructions to Donate to CS Entrepreneurial Capstone</strong></h4>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
           </div>
           <div class="modal-body">
             <p> <strong>&bull;</strong>  On the donate page, select or enter the amount you wish to give, and whether or not this gift is in memory or in honor of someone.<br>
