--- a/_includes/header.html
+++ b/_includes/header.html
@@ -61,8 +61,8 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Computer Science Entrepreneurial Capstone at the University of Colorado Boulder</div>
-<!--                <a href="#about" class="page-scroll btn btn-xl">Learn More</a>-->
-                    <button type="button" class="button" data-toggle="modal" data-target="#myModal"><strong>&#36;</strong> Donate</button>
+                <a href="giving.cu.edu/HanCSCapstone" class="page-scroll btn btn-xl"><strong>&#36;</strong> Donate</a>
+<!--                    <button type="button" class="button" data-toggle="modal" data-target="#myModal"><strong>&#36;</strong> Donate</button> -->
             </div>
         </div>
     </header>
