--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -11,13 +11,18 @@
           <center>
             <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-    <!--                <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>   -->
+    <!--                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>   -->
                 </span>
 <!--                <h4 class="service-heading"><center>New Venture Challenge</center></h4>-->
                 <p class="text-muted">Out of a total of 15 teams from class that competed in the NVC IT track semi-finals, 3 of our teams made it to the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals<br><strong>&bull;  BeautiBook</strong> went on to win the <a href="http://www.colorado.edu/nvc/" target="_blank">NVC</a> IT Track Finals and they were awarded <strong>$2,000</strong> to use to further their company.<br>
                     <strong>&bull;  Hearth</strong> placed 3rd in the NVC IT Track Finals and was awarded<strong>$750</strong> to further their company<br><strong>&bull;  Ticket Buffs</strong> was awarded<strong>$500</strong> to further their company<br><br><strong>Lambda Leaf</strong> placed 3rd in the NVC Research Track Finals and was awarded<strong>$1000</strong> to further their company.</p>
             </div>
+            <style>
+              .col-md-4 col-sm-6 portfolio-item{
+                right: 60px;
+              }
+            </style>
             <div class="col-md-4 col-sm-6 portfolio-item">
     <!--a href="#portfolioModal" class="portfolio-link" data-toggle="modal"-->
               <a href="" class="portfolio-link" target="_blank">
