--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -25,7 +25,14 @@
                     <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>   -->
                 </span>
 <!--                <h4 class="service-heading"><center>New Venture Challenge</center></h4>-->
-                <img src="img/Beautibook-NVC.jpeg" alt="BeautiBook won 3rd place in NVC Championships">
+                <style>
+                  img.resize {
+                    width:240px;
+                    height:320px;
+
+                  }
+                </style>
+                <img class = "resize" src="img/Beautibook-NVC.jpeg" alt="BeautiBook won 3rd place in NVC Championships" width>
                 <p class="text-muted"><strong>BeautiBook won 3rd place in NVC Championships</strong></p>
             </div>
 
