--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -27,8 +27,9 @@
 <!--                <h4 class="service-heading"><center>New Venture Challenge</center></h4>-->
                 <style>
                   img.resize {
-                    width:240px;
-                    height:320px;
+                    width:400px;
+                    height:400px;
+                    down:60px;
 
                   }
                 </style>
