--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -33,7 +33,8 @@
 
                   }
                 </style>
-                <img class = "resize" src="img/Beautibook-NVC.jpeg" alt="BeautiBook won 3rd place in NVC Championships" width>
+                <br><br><br><br><br><br>
+                <img class = "resize" src="img/Beautibook-NVC.jpeg" alt="BeautiBook won 3rd place in NVC Championships" width="320" height="320">
                 <p class="text-muted"><strong>BeautiBook won 3rd place in NVC Championships</strong></p>
             </div>
 
