--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -23,7 +23,7 @@
             <div class="col-md-6 text-center">
 <!--                <h4 class="service-heading"><center>New Venture Challenge</center></h4>-->
 
-                <p class="text-muted"><strong>BeautiBook won 3rd place in NVC Championships</strong></p>
+<!--                <p class="text-muted"><strong>BeautiBook won 3rd place in NVC Championships</strong></p> -->
                 <img class = "resize" src="img/Beautibook-NVC.jpeg" alt="BeautiBook won 3rd place in NVC Championships" width="300" height="400">
             </div>
 
