--- a/_includes/header.html
+++ b/_includes/header.html
@@ -61,7 +61,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Computer Science Entrepreneurial Capstone at the University of Colorado Boulder</div>
-                <a href="https://giving.cu.edu/fund/computer-science-senior-entrepreneurial-capstone-fund" class="page-scroll btn btn-xl"><strong>&#36;</strong> Donate</a>
+                <a href="https://giving.cu.edu/fund/computer-science-senior-entrepreneurial-capstone-fund" class="page-scroll btn btn-xl" target="_blank"><strong>&#36;</strong> Donate</a>
 <!--                    <button type="button" class="button" data-toggle="modal" data-target="#myModal"><strong>&#36;</strong> Donate</button> -->
             </div>
         </div>
