--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -28,16 +28,16 @@
             </div>
 
           </center>
-<!--
+
             <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-usd fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">Revenue Generating</h4>
-                <p class="text-muted">Some companies were focused on non-revenue generating ideas, while others made money. One company created in the Capstone brought in over <strong>$2,000</strong> in revenue.</p>
+                <h4 class="service-heading">MD5 Cybersecurity Hackathon</h4>
+                <h4>Mopsus pitched and demoed their Security Monitoring Suite and won <strong>$15,000</strong> to advance their product in collaboration with MD5 / The DoD.</h4>
             </div>
-            <div class="col-md-6 text-center">
+<!--            <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-code fa-stack-1x fa-inverse"></i>
