--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -37,6 +37,15 @@
                 <h4 class="service-heading">MD5 Cybersecurity Hackathon</h4>
                 <h5 class="service-heading">Mopsus pitched and demoed their Security Monitoring Suite and won <strong>$15,000</strong> to advance their product in collaboration with MD5 / The DoD.</h5>
             </div>
+
+            <div class="col-md-6 text-center">
+                <span class="fa-stack fa-4x">
+                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-flask fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="service-heading">Catalyze CU</h4>
+                <p class="text-muted">Congratulations to the two teams from our capstone who have been admitted to <a href="http://catalyzecu.com/" target="_blank">Catalyze CU</a>, namely <a href="http://lambdaleaf.com/"target="_blank"><strong>Hearth</strong></a> and <a href="http://hearth.systems/"target="_blank"><strong>Framework Miner/LambdaLeaf</strong></a>!</p>
+            </div>
 <!--            <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
