Updating Achievements Section

--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -24,7 +24,7 @@
 <!--                <h4 class="service-heading"><center>New Venture Challenge</center></h4>-->
 
 <!--                <p class="text-muted"><strong>BeautiBook won 3rd place in NVC Championships</strong></p> -->
-                <img class = "resize" src="img/Beautibook-NVC.jpeg" alt="BeautiBook won 3rd place in NVC Championships" width="300" height="400">
+                <img class = "resize" src="img/Beautibook-NVC.jpeg" alt="BeautiBook won $5K when placing 3rd place in the NVC Championships" width="300" height="400">
             </div>
 
           </center>
@@ -44,7 +44,7 @@
                     <i class="fa fa-flask fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">Catalyze CU</h4>
-                <p class="text-muted">Congratulations to the two teams from our capstone who have been admitted to <a href="http://catalyzecu.com/" target="_blank">Catalyze CU</a>, namely <a href="http://lambdaleaf.com/"target="_blank"><strong>Hearth</strong></a> and <a href="http://hearth.systems/"target="_blank"><strong>Framework Miner/LambdaLeaf</strong></a>!</p>
+                <p class="text-muted">Congratulations to the two teams from our capstone who have been admitted to <a href="http://catalyzecu.com/" target="_blank"><strong>Catalyze CU</strong></a>, namely <a href="http://lambdaleaf.com/"target="_blank"><strong>Framework Miner/Lambda Leaf</strong></a> and <a href="http://hearth.systems/"target="_blank"><strong>Hearth</strong></a>!</p>
             </div>
 <!--            <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
