Adding College of Engineering Expo Events

--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -46,15 +46,18 @@
                 <h4 class="service-heading">Catalyze CU</h4>
                 <p class="text-muted">Congratulations to the two teams from our capstone who have been admitted to <a href="http://catalyzecu.com/" target="_blank"><strong>Catalyze CU</strong></a>, namely <a href="http://lambdaleaf.com/"target="_blank"><strong>Framework Miner/Lambda Leaf</strong></a> and <a href="http://hearth.systems/"target="_blank"><strong>Hearth</strong></a>!</p>
             </div>
-<!--            <div class="col-md-6 text-center">
+            <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-code fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">Computer Science Senior Expo</h4>
-                <p class="text-muted">Best Poster: 1st - The Grower, 2nd - Crawlr<br>
-                                      Best Demo: 2nd - StuffSanity<br>
-                                      Best Technical Communication: 2nd - Almond</p>
+                <h4 class="service-heading">CU College of Engineering Expo</h4>
+                <p class="text-muted">At the <a href="https://www.colorado.edu/engineering/expo">CU College of Engineering Expo</a April 27, the following teams were given awards for their posters/demos by our panel of judges:<br>
+                                      Best Poster: (tie) <a href = "https://www.flatironapp.com/">Flatiron</a> and <a href = "http://www.resonator.life/">Resonance</a><br>
+                                      Best Demo: (tie) <a href = "http://appandtaps.com/">AppandTaps</a> and <a href = "http://beautibookapp.com/">Beautibook</a><br>
+                                      Best Business: (tie) <a href = "http://appandtaps.com/">AppandTaps</a>, <a href = "http://www.giveandgofilm.com">Give and Go</a>, <a href = "http://lambdaleaf.com/">Lambda Leaf</a><br>
+                                      Best Presentation: <a href = "http://www.resonator.life/">Resonance</a><br>
+                                      Best Technology: <a href = "http://www.powerstats.io/">PowerStats</a><br></p>
             </div>
             <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
@@ -64,6 +67,6 @@
                 <h4 class="service-heading">Catalyze CU</h4>
                 <p class="text-muted">Glimpse has been accepted to the equity free <a href="http://catalyzecu.com/" target="_blank">Catalyze CU Accelerator</a> program.</p>
             </div>
--------->
+
         </div>
     </section>
