--- a/_includes/achievements.html
+++ b/_includes/achievements.html
@@ -59,7 +59,7 @@
                                       Best Presentation: <a href = "http://www.resonator.life/">Resonance</a><br>
                                       Best Technology: <a href = "http://www.powerstats.io/">PowerStats</a><br></p>
             </div>
-            <div class="col-md-6 text-center">
+  <!--          <div class="col-md-6 text-center">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-flask fa-stack-1x fa-inverse"></i>
@@ -67,6 +67,6 @@
                 <h4 class="service-heading">Catalyze CU</h4>
                 <p class="text-muted">Glimpse has been accepted to the equity free <a href="http://catalyzecu.com/" target="_blank">Catalyze CU Accelerator</a> program.</p>
             </div>
-
+-->
         </div>
     </section>
